# OG-Maths

./: .gitattributes  .gitignore  CMakeLists.txt  ChangeLog  Doxyfile.in  INSTALL.md  LICENSE.txt  README.md  ReleaseNotes
cmake/: buildutils.py  makeblob.py  syslibs.py  verinfo.py
cmake/modules/: GTestTests.cmake  JNIUtils.cmake  MultiLib.cmake  NativeLibraryBuilder.cmake  NativeLibraryUtils.cmake  OpenGammaGTest.cmake  UseJava.cmake  cmcpuid.c
combine/: combine.py  test_combine.py
include/: bindings.hh  com_opengamma_longdog_materialisers_Materialisers.h  com_opengamma_longdog_nativeloader_GetSupportedInstructionSet.h  com_opengamma_longdog_nativeloader_NativeLibraries.h  com_opengamma_maths_materialisers_Materialisers.h  com_opengamma_maths_mem_Stdlib.h  com_opengamma_maths_nativeloader_NativeLibraries.h  containers.hh  convertto.hh  customrunners.hh  debug.h  dispatch.hh  entrypt.h  entrypt.hh  equals.hh  exceptions.hh  execution.hh  expression.hh  expressionbase.hh  exprfactory.hh  exprtypeenum.h  fake_jni.h  fake_jni_md.h  iss.hh  izy.hh  jbindings.hh  jdispatch.hh  jni_md_linux.h  jshim.h  jterminals.hh  jvmcache.h  jvmmanager.hh  lapack.hh  lapack_raw.h  mem.h  modifiermacros.h  numeric.hh  numerictypes.hh  probeinstructionset.h  register.hh  (+8 more)
include/test/: .terminals.hh.swp  fake_jvm.hh  terminals.hh  test_utils.hh
licenses/: Google_BSD3c.txt  MLPL.txt  gcc-exception-3.1-faq.html  gcc-exception-3.1.html
src/: CMakeLists.txt
src/generator/: CMakeLists.txt  createexpressions.py  createexprtemplates.py  dispatch.py  dispatchtemplates.py  enums.py  enumtemplates.py  expression.py  exprtemplates.py  exprtree.py  generator.py  runners.py  runnertemplates.py  util.py
src/generator/scripts/: construct.m  gen_bsx_function_tests.m  gen_bsx_infix_tests.m  invsingle.m  testgen.m
src/java/: .checkstyle  .classpath  .gitignore  .project  CMakeLists.txt  pom.xml
src/java/src/: CMakeLists.txt
src/java/src/demo/: CMakeLists.txt
src/java/src/demo/java/com/opengamma/maths/demo/: AdditionDemo.java  DemoInterface.java  MtimesVsTimesDemo.java  RunDemo.java  RunDemoTest.java
src/java/src/main/: CMakeLists.txt
src/java/src/main/config/: NativeLibraries.properties
src/java/src/main/java/com/opengamma/longdog/: DOGMA2.java
src/java/src/main/java/com/opengamma/longdog/datacontainers/: ExprEnum.java  ExprTypeEnum.java  OGArray.java  OGNumeric.java  OGTerminal.java
src/java/src/main/java/com/opengamma/longdog/exceptions/: LongdogInitializationException.java  LongdogUnsupportedPlatformException.java  MathsException.java  MathsExceptionIllegalArgument.java  MathsExceptionNative.java  MathsExceptionNativeComputation.java  MathsExceptionNativeConversion.java  MathsExceptionNativeUnspecified.java  MathsExceptionNonConformance.java  MathsExceptionNotImplemented.java  MathsExceptionNullPointer.java  MathsExceptionOnInitialization.java  MathsExceptionUnsupportedPlatform.java
src/java/src/main/java/com/opengamma/longdog/helpers/: Catchers.java  DenseMemoryManipulation.java  FuzzyEquals.java  MathsException.java  MathsExceptionIllegalArgument.java  MathsExceptionNonConformance.java  MathsExceptionNotImplemented.java  MathsExceptionNullPointer.java  MatrixPrimitiveUtils.java
src/java/src/main/java/com/opengamma/longdog/materialisers/: Materialisers.java
src/java/src/main/java/com/opengamma/longdog/nativeloader/: GetSupportedInstructionSet.java  NativeLibraries.java  NativeLibrariesSelfTest.java  SupportedInstructionSet.java
src/java/src/main/java/com/opengamma/longdog/nodes/: COPY.java  MINUS.java  MTIMES.java  NEGATE.java  NODE.java  NORM2.java  PLUS.java  SELECTRESULT.java  SVD.java
src/java/src/main/java/com/opengamma/maths/: DOGMA.java  DOGMA2.java
src/java/src/main/java/com/opengamma/maths/datacontainers/: ExprEnum.java  OGNumeric.java  (+1 more)
src/java/src/test/: CMakeLists.txt
src/java/src/test/java/com/opengamma/maths/: DOGMATest.java
src/jinitialise/: CMakeLists.txt  jnionloadimpl.c  probeinstructionset.c  rpath_hack.c
src/jshim/: CMakeLists.txt  createexpr.cc  dispatch.cc  exceptions.cc  exprfactory.cc  jbindings.cc  jdispatch.cc  jmem.cc  jshim.cc  jterminals.cc  jvmcache.c  jvmmanager.cc
src/jshim/test/: CMakeLists.txt  check_jbindings.cc  check_jdispatch.cc  check_jterminals.cc  check_jvmmanager_fakejni.cc
src/librdag/: CMakeLists.txt  containers.cc  convertto.cc  customrunners.cc  dispatch.cc  dispatch.py  dispatchtemplates.py  entrypt.cc  enums.py  equals.cc  exceptions.cc  execution.cc  expression.cc  expression.py  expressionbase.cc  exprtemplates.py  exprtree.py  exprtypes.cc  generator.py  iss.cc  izy.cc  lapack.cc  mem.cc  numeric.cc  numericbase.cc  numerictypes.cc  register.cc  runners.cc  runners.py  runnertemplates.py  runtree.cc  templates.py  terminal.cc  terminals.py  visitor.cc
src/librdag/runners/: ctransposerunner.cc  invrunner.cc  lurunner.cc  mldividerunner.cc  mtimesrunner.cc  norm2runner.cc  pinvrunner.cc  qrrunner.cc  selectresultrunner.cc  sumcolsrunner.cc  sumrowsrunner.cc  svdrunner.cc  transposerunner.cc
src/librdag/test/: CMakeLists.txt  check_containers.cc  check_convertto.cc  check_dispatch.cc  check_entrypt.c  check_entrypt.cc  check_equals.cc  check_exceptions.cc  check_execution.cc  check_expressions.cc  check_iss.cc  check_izy.cc  check_lapack.cc  check_mem.cc  check_numerictypes.cc  check_register.cc  check_rtti.cc  check_runtree.cc  check_terminals.cc  check_terminals_abstract_regression.cc  valgrind.supp
src/librdag/test/nodes/: CMakeLists.txt  check_acos.cc  check_asinh.cc  check_atan.cc  check_cos.cc  check_ctranspose.cc  check_exp.cc  check_inv.cc  check_lu.cc  check_minus.cc  check_mldivide.cc  check_mtimes.cc  check_norm2.cc  check_pinv.cc  check_plus.cc  check_qr.cc  check_rdivide.cc  check_selectresult.cc  check_sin.cc  check_sinh.cc  check_sumcols.cc  check_sumrows.cc  check_svd.cc  check_tan.cc  check_tanh.cc  check_times.cc  check_transpose.cc  testnodes.cc  testnodes.hh
src/ogrpath/: CMakeLists.txt  rpath_hack.c
src/win32/: test.manifest  test.rc
style/: codetemplates.xml  og-maths-style.xml
(+204 files in other folders)
